--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <title>iktruhs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Favicon: 10-pointed star -->
+  <link rel="icon" type="image/svg+xml" href='data:image/svg+xml,
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+    <polygon points="50,2 61,38 98,38 68,59 79,95 50,73 21,95 32,59 2,38 39,38"
+             fill="white" stroke="black" stroke-width="2"/>
+  </svg>'>
+
   <style>
     body {
       margin: 0;
@@ -34,5 +41,6 @@
   </div>
 </body>
 </html>
+
 
 
