--- a/index.html
+++ b/index.html
@@ -6,16 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- 10-point star favicon -->
-  <link rel="icon" type="image/svg+xml" href='data:image/svg+xml,
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-    <polygon points="50,2 57,30 85,30 60,50 70,78 50,60 30,78 40,50 15,30 43,30"
-             fill="white" stroke="black" stroke-width="2"/>
-  </svg>'>
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><polygon points='50,2 57,30 85,30 60,50 70,78 50,60 30,78 40,50 15,30 43,30' fill='white' stroke='black' stroke-width='2'/></svg>">
 
   <style>
     body {
       margin: 0;
-      font-family: "Verdana", Geneva, sans-serif;
+      font-family: Verdana, Geneva, sans-serif;
       font-weight: 700;
       background: #0a0a0a;
       color: #f2f2f2;
@@ -33,6 +29,15 @@
       flex-direction: column;
       gap: 20px;
       margin-bottom: 40px;
+      align-items: center;
+    }
+
+    .logo {
+      max-width: 180px; /* adjust size here */
+      width: 100%;
+      height: auto;
+      margin-bottom: 20px;
+      opacity: 0.9;
     }
 
     a {
@@ -50,14 +55,20 @@
 
 <body>
   <div class="container">
+    <img 
+      src="https://i.imgur.com/vQZ0jxN.png" 
+      alt="iktruhs graphic"
+      class="logo"
+    >
+
     <h1>iktruhs — it works</h1>
     <h1>Fuck You Timothee Chalamet.</h1>
     <h1>I Hope You Have A Very Bad Day.</h1>
     <h1>website still under construction</h1>
   </div>
 
-  <!-- Leave a comment link -->
   <a href="comments.html">Leave a Comment</a>
 </body>
 </html>
+
 
