--- a/comments.html
+++ b/comments.html
@@ -74,10 +74,16 @@
     <input type="text" name="name" placeholder="Your Name" required>
     <input type="email" name="email" placeholder="Your Email" required>
     <textarea name="message" rows="5" placeholder="Your Comment" required></textarea>
-    <!-- Optional: prevent spam -->
+
+    <!-- Redirect back to main site -->
+    <input type="hidden" name="_next" value="https://yourusername.github.io/">
+
+    <!-- Disable captcha -->
     <input type="hidden" name="_captcha" value="false">
+
     <button type="submit">Send Comment</button>
   </form>
 
 </body>
 </html>
+
