--- a/comments.html
+++ b/comments.html
@@ -67,7 +67,7 @@
 </head>
 
 <body>
-  <h1>iktruhs — Leave a Comment</h1>
+  <h1>Yodskini Productions — Leave a Comment</h1>
 
   <!-- Comment Form -->
   <form action="https://formsubmit.co/iktruhs@gmail.com" method="POST">
@@ -76,7 +76,7 @@
     <textarea name="message" rows="5" placeholder="Your Comment" required></textarea>
 
     <!-- Redirect back to main site -->
-    <input type="hidden" name="_next" value="https://iktruhs.com/#comment-sent">
+    <input type="hidden" name="_next" value="https://iktruhs.github.io/#comment-sent">
 
     <!-- Disable captcha -->
     <input type="hidden" name="_captcha" value="false">
