--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- 10-point star favicon -->
-  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml;utf8,
-  <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>
-    <polygon points='50,2 57,30 85,30 60,50 70,78 50,60 30,78 40,50 15,30 43,30'
-             fill='white' stroke='black' stroke-width='2'/>
-  </svg>">
+  <link rel="icon" type="image/svg+xml"
+    href="data:image/svg+xml;utf8,
+    <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>
+      <polygon points='50,2 57,30 85,30 60,50 70,78 50,60 30,78 40,50 15,30 43,30'
+      fill='white' stroke='black' stroke-width='2'/>
+    </svg>">
 
   <style>
     html {
@@ -29,7 +30,7 @@
       overflow-x: hidden;
     }
 
-    /* Fixed top logo container */
+    /* Fixed top logo */
     .fixed-logo {
       position: fixed;
       top: -40px;
@@ -42,9 +43,7 @@
     .fixed-logo img {
       max-width: 400px;
       width: 100%;
-      height: auto;
       opacity: 0.95;
-      transform-origin: center top;
       transition: transform 0.25s ease, opacity 0.25s ease;
     }
 
@@ -53,17 +52,14 @@
       opacity: 1;
     }
 
-    /* Page wrapper */
     #page {
       display: flex;
       flex-direction: column;
       align-items: center;
       gap: 24px;
-      transform-origin: top center;
       transition: transform 0.6s ease, opacity 0.6s ease;
     }
 
-    /* Closing animation */
     body.closing #page {
       transform: scale(0.78);
       opacity: 0;
@@ -71,7 +67,6 @@
 
     a {
       color: #f2f2f2;
-      text-decoration: underline;
       font-weight: bold;
     }
 
@@ -79,31 +74,13 @@
       color: #ffcc00;
     }
 
-    /* Contact section */
     .contact {
       margin-top: 120px;
-      padding: 40px 20px 80px;
+      padding-bottom: 80px;
       opacity: 0.75;
-      font-size: 0.95rem;
     }
 
-    .contact h2 {
-      font-size: 1.2rem;
-      margin-bottom: 16px;
-      letter-spacing: 1px;
-    }
-
-    .contact a {
-      display: block;
-      margin: 6px 0;
-      text-decoration: none;
-    }
-
-    .contact a:hover {
-      text-decoration: underline;
-    }
-
-    /* Music controls */
+    /* MUSIC PLAYER */
     .music-controls {
       position: fixed;
       bottom: 20px;
@@ -114,74 +91,75 @@
     }
 
     .music-controls button {
-      background: #0a0a0a;
+      background: none;
+      border: 1px solid #f2f2f2;
       color: #f2f2f2;
-      border: 2px solid #f2f2f2;
       padding: 8px 12px;
-      font-weight: 700;
+      font-weight: bold;
       cursor: pointer;
-      transition: 0.2s;
     }
 
     .music-controls button:hover {
       background: #f2f2f2;
       color: #0a0a0a;
     }
+
+    footer {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      padding: 10px 0;
+      opacity: 0.7;
+      font-size: 0.85rem;
+      background: #0a0a0a;
+    }
   </style>
 </head>
 
-<body id="top">
+<body>
 
-  <!-- Background Music -->
-  <audio id="bg-music" loop>
-    <source src="Dreamin Of The Past.mp3" type="audio/mpeg">
-  </audio>
-
-  <!-- Music Controls -->
-  <div class="music-controls">
-    <button onclick="togglePlay()">Play / Pause</button>
-    <button onclick="toggleMute()">Mute</button>
-  </div>
-
-  <!-- Clickable fixed logo -->
+  <!-- LOGO -->
   <div class="fixed-logo" onclick="resetPage()">
     <img src="https://i.imgur.com/ZzvBYMX.png" alt="iktruhs logo">
   </div>
 
-  <!-- Page content wrapper -->
+  <!-- AUDIO -->
+  <audio id="music" loop>
+    <source src="Dreamin Of The Past.mp3" type="audio/mpeg">
+  </audio>
+
+  <!-- PLAYER -->
+  <div class="music-controls">
+    <button onclick="togglePlay()">PLAY / PAUSE</button>
+    <button onclick="toggleMute()">MUTE</button>
+  </div>
+
+  <!-- PAGE -->
   <div id="page">
     <h1>yodskini productions — it works</h1>
     <h1>Fuck You Timothee Chalamet.</h1>
     <h1>I Hope You Have A Very Bad Day.</h1>
     <h1>website still under construction</h1>
 
-    <div style="height: 1200px;"></div>
+    <div style="height:1200px"></div>
 
     <a href="comments.html">Leave a Comment</a>
 
-    <!-- Contact section -->
     <div class="contact">
       <h2>contact</h2>
       <a href="mailto:iktruhs@gmail.com">iktruhs@gmail.com</a>
       <a href="https://instagram.com/iktruhs" target="_blank">instagram @iktruhs</a>
       <a href="https://twitter.com/kincaidnb" target="_blank">twitter @kincaidnb</a>
     </div>
-
-    <footer style="margin-bottom: 30px; opacity: 0.7; font-size: 0.9rem;">
-      © 2026 Yodskini Productions. All rights reserved.
-    </footer>
   </div>
 
+  <footer>
+    © 2026 Yodskini Productions. All rights reserved.
+  </footer>
+
+  <!-- JS -->
   <script>
-    const music = document.getElementById("bg-music");
-
-    music.volume = 0.6;
-    music.muted = true;
-
-    // Browser-safe autoplay
-    document.addEventListener("click", () => {
-      music.play().catch(() => {});
-    }, { once: true });
+    const music = document.getElementById("music");
 
     function togglePlay() {
       if (music.paused) {
@@ -197,16 +175,16 @@
 
     function resetPage() {
       document.body.classList.add("closing");
-
-      setTimeout(() => {
-        window.scrollTo(0, 0);
-      }, 300);
-
-      setTimeout(() => {
-        document.body.classList.remove("closing");
-      }, 600);
+      setTimeout(() => window.scrollTo(0, 0), 300);
+      setTimeout(() => document.body.classList.remove("closing"), 600);
     }
+
+    // unlock audio on first click anywhere
+    document.addEventListener("click", () => {
+      music.play().catch(() => {});
+    }, { once: true });
   </script>
 
 </body>
 </html>
+
