--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       opacity: 1;
     }
 
+    /* Page wrapper */
     #page {
       display: flex;
       flex-direction: column;
@@ -76,14 +77,14 @@
 
     .contact {
       margin-top: 120px;
-      padding-bottom: 80px;
+      padding-bottom: 120px;
       opacity: 0.75;
     }
 
     /* MUSIC PLAYER */
     .music-controls {
       position: fixed;
-      bottom: 20px;
+      bottom: 60px;
       right: 20px;
       display: flex;
       gap: 10px;
@@ -109,9 +110,9 @@
       bottom: 0;
       width: 100%;
       padding: 10px 0;
+      background: #0a0a0a;
       opacity: 0.7;
       font-size: 0.85rem;
-      background: #0a0a0a;
     }
   </style>
 </head>
@@ -125,16 +126,17 @@
 
   <!-- AUDIO -->
   <audio id="music" loop>
-    <source src="Dreamin Of The Past.mp3" type="audio/mpeg">
+    <source src="music.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
   </audio>
 
-  <!-- PLAYER -->
+  <!-- MUSIC CONTROLS -->
   <div class="music-controls">
-    <button onclick="togglePlay()">PLAY / PAUSE</button>
-    <button onclick="toggleMute()">MUTE</button>
+    <button onclick="togglePlay(this)">PLAY</button>
+    <button onclick="toggleMute(this)">MUTE</button>
   </div>
 
-  <!-- PAGE -->
+  <!-- PAGE CONTENT -->
   <div id="page">
     <h1>yodskini productions — it works</h1>
     <h1>Fuck You Timothee Chalamet.</h1>
@@ -161,16 +163,19 @@
   <script>
     const music = document.getElementById("music");
 
-    function togglePlay() {
+    function togglePlay(btn) {
       if (music.paused) {
         music.play();
+        btn.textContent = "PAUSE";
       } else {
         music.pause();
+        btn.textContent = "PLAY";
       }
     }
 
-    function toggleMute() {
+    function toggleMute(btn) {
       music.muted = !music.muted;
+      btn.textContent = music.muted ? "UNMUTE" : "MUTE";
     }
 
     function resetPage() {
@@ -178,11 +183,6 @@
       setTimeout(() => window.scrollTo(0, 0), 300);
       setTimeout(() => document.body.classList.remove("closing"), 600);
     }
-
-    // unlock audio on first click anywhere
-    document.addEventListener("click", () => {
-      music.play().catch(() => {});
-    }, { once: true });
   </script>
 
 </body>
