--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       opacity: 1;
     }
 
+    /* Page wrapper */
     #page {
       display: flex;
       flex-direction: column;
@@ -68,19 +69,29 @@
     a {
       color: #f2f2f2;
       font-weight: bold;
+      text-decoration: none;
     }
 
     a:hover {
       color: #ffcc00;
+      text-decoration: underline;
     }
 
+    /* Contact section */
     .contact {
       margin-top: 120px;
-      padding-bottom: 80px;
+      padding-bottom: 120px;
       opacity: 0.75;
     }
 
-   
+    .contact h2 {
+      margin-bottom: 16px;
+      letter-spacing: 1px;
+    }
+
+    .contact a {
+      display: block;        /* <-- THIS FIXES IT */
+      margin: 6px 0;
     }
 
     footer {
@@ -88,9 +99,9 @@
       bottom: 0;
       width: 100%;
       padding: 10px 0;
+      background: #0a0a0a;
       opacity: 0.7;
       font-size: 0.85rem;
-      background: #0a0a0a;
     }
   </style>
 </head>
@@ -102,7 +113,6 @@
     <img src="https://i.imgur.com/ZzvBYMX.png" alt="iktruhs logo">
   </div>
 
-  
   <!-- PAGE -->
   <div id="page">
     <h1>yodskini productions — it works</h1>
@@ -110,7 +120,7 @@
     <h1>I Hope You Have A Very Bad Day.</h1>
     <h1>website still under construction</h1>
 
-    <div style="height:1200px"></div>
+    <div style="height:1200px;"></div>
 
     <a href="comments.html">Leave a Comment</a>
 
@@ -126,6 +136,15 @@
     © 2026 Yodskini Productions. All rights reserved.
   </footer>
 
+  <script>
+    function resetPage() {
+      document.body.classList.add("closing");
+      setTimeout(() => window.scrollTo(0, 0), 300);
+      setTimeout(() => document.body.classList.remove("closing"), 600);
+    }
+  </script>
+
 </body>
 </html>
+
 
