--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
     <div style="height:1200px;"></div>
 
     <a href="comments.html">Leave a Comment</a>
-
+    
+    <a href="hatelist.html">Hate List</a>
+    
     <div class="contact">
       <h2>contact</h2>
       <a href="mailto:iktruhs@gmail.com">iktruhs@gmail.com</a>
