--- a/hatelist.html
+++ b/hatelist.html
@@ -104,9 +104,10 @@
 
 <body>
   <!-- LOGO -->
-  <div class="fixed-logo" onclick="resetPage()">
-    <img src="https://i.imgur.com/ZzvBYMX.png" alt="iktruhs logo">
-  </div>
+ <a class="fixed-logo" href="index.html">
+  <img src="https://i.imgur.com/ZzvBYMX.png" alt="iktruhs logo">
+</a>
+
 
   <!-- PAGE -->
   <div id="page">
