--- a/hatelist.html
+++ b/hatelist.html
@@ -112,16 +112,17 @@
   <!-- PAGE -->
   <div id="page">
     <div class="title">HATE LIST</div>
+    <p class="back-text">Not In Order.</p>
 
     <ul class="hate-list">
-      <li>Lorem ipsum dolor sit amet</li>
-      <li>Consectetur adipiscing elit</li>
-      <li>Sed do eiusmod tempor</li>
-      <li>Incididunt ut labore et dolore</li>
-      <li>Magna aliqua ut enim ad</li>
-      <li>Minim veniam quis nostrud</li>
-      <li>Exercitation ullamco laboris</li>
-      <li>Nisi ut aliquip ex ea</li>
+      <li>Timothee Chalamet</li>
+      <li>Kanye West</li>
+      <li>Ian</li>
+      <li>Benjamin Netanyahu</li>
+      <li>Trump and his administration</li>
+      <li>Country Artists</li>
+      <li>Taylor Swift</li>
+      <li>EsdeeKid</li>
       <li>Commodo consequat duis aute</li>
       <li>Irrure dolor in reprehenderit</li>
     </ul>
