--- a/fuck.html
+++ b/fuck.html
@@ -177,7 +177,7 @@
 
     <a href="comments.html">Leave a Comment</a>
     <a href="hatelist.html">Hate List</a>
-    
+     <a href="hatelist.html">Hate List</a>
     <div class="contact">
       <h2>contact</h2>
       <a href="mailto:iktruhs@gmail.com">iktruhs@gmail.com</a>
