--- a/fuck.html
+++ b/fuck.html
@@ -156,11 +156,11 @@
     <div class="choice-section">
       <img src="https://i.imgur.com/RBaOvBU_d.png?maxwidth=520&shape=thumb&fidelity=high" class="background-main" alt="background">
       
-      <a href="https://your-destination-1.com" class="palm-link left-palm">
+      <a href="https://nb.html" class="palm-link left-palm">
         <img src="https://i.imgur.com/yZEwOFG_d.png?maxwidth=520&shape=thumb&fidelity=high" alt="Choice 1">
       </a>
 
-      <a href="https://your-destination-2.com" class="palm-link right-palm">
+      <a href="https://irs.html" class="palm-link right-palm">
         <img src="https://i.imgur.com/0Rkj7LJ_d.png?maxwidth=520&shape=thumb&fidelity=high" alt="Choice 2">
       </a>
     </div>
