--- a/nb.html
+++ b/nb.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <title>Newport Image</title>
+
   <style>
     body {
       margin: 0;
       padding: 0;
       display: flex;
       justify-content: center;
-      /* Changed from 'center' to 'flex-start' to move it to the top */
-      align-items: flex-start; 
+      align-items: flex-start;
       min-height: 100vh;
       background-color: #0a0a0a;
       overflow: hidden;
+      font-family: Arial, Helvetica, sans-serif;
     }
 
     .image-wrapper {
       width: 90%;
       max-width: 800px;
-      /* Add padding-top to control exactly how close to the top edge it is */
-      padding-top: 20px; 
+      padding-top: 20px;
     }
 
     .image-wrapper img {
@@ -29,13 +29,57 @@
       object-fit: contain;
       display: block;
     }
+
+    /* Clock styles */
+    .clock {
+      position: fixed;
+      top: 14px;
+      right: 16px;
+      font-size: 13px;
+      color: #bdbdbd;
+      letter-spacing: 0.5px;
+      text-align: right;
+      line-height: 1.4;
+      user-select: none;
+    }
   </style>
 </head>
 <body>
+
+  <div class="clock" id="clock"></div>
 
   <div class="image-wrapper">
     <img src="https://i.imgur.com/BGBCbK8.png" alt="Featured Image">
   </div>
 
+  <script>
+    const clockEl = document.getElementById("clock");
+
+    function updateClock() {
+      const now = new Date();
+
+      const date = now.toLocaleDateString("en-US", {
+        month: "2-digit",
+        day: "2-digit",
+        year: "numeric"
+      });
+
+      const time = now.toLocaleTimeString("en-US", {
+        hour: "numeric",
+        minute: "2-digit",
+        hour12: true
+      });
+
+      clockEl.innerHTML = `
+        ${date}<br>
+        ${time}
+      `;
+    }
+
+    updateClock();
+    setInterval(updateClock, 60000);
+  </script>
+
 </body>
 </html>
+
