--- a/irs.html
+++ b/irs.html
@@ -15,7 +15,6 @@
     min-height: 100vh;
   }
 
-  /* VHS FRAME */
   .vhs-frame {
     padding: 28px;
     background: #000;
@@ -23,7 +22,6 @@
     justify-content: center;
   }
 
-  /* CRT SCREEN */
   .vhs-screen {
     position: relative;
     width: 90vw;
@@ -32,18 +30,13 @@
     background: #000;
     border-radius: 24px;
     overflow: hidden;
-
-    transform: perspective(1200px) scale(1.01);
-
     box-shadow:
       inset 0 0 100px rgba(0,0,0,0.9),
       0 0 60px rgba(255,255,255,0.06);
-
     animation: flicker 0.15s infinite;
     filter: blur(0.18px) contrast(1.05) saturate(1.1);
   }
 
-  /* VIDEO ITSELF */
   .vhs-screen video {
     width: 100%;
     height: 100%;
@@ -61,7 +54,7 @@
       rgba(0,0,0,0.6) 65%,
       rgba(0,0,0,0.95) 100%
     );
-    pointer-events: none;
+    pointer-events: none; /* <-- KEY FIX */
     z-index: 3;
   }
 
@@ -77,7 +70,7 @@
       rgba(0,0,0,0.03) 2px,
       rgba(0,0,0,0.03) 3px
     );
-    pointer-events: none;
+    pointer-events: none; /* <-- KEY FIX */
     z-index: 4;
     mix-blend-mode: overlay;
   }
@@ -107,3 +100,4 @@
 
 </body>
 </html>
+
