--- a/irs.html
+++ b/irs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>VHS Video</title>
+<title>iktruhs</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -25,7 +25,7 @@
 <body>
 
 <video
-  src="https://dl.dropboxusercontent.com/s/fyz2glhrhm6az19jgj6ck/VIDEO-Family-First-Jaundice-and-Autism-6am-News-101110.mp4"
+  src="https://www.dropbox.com/s/fyz2glhrhm6az19jgj6ck/VIDEO-Family-First-Jaundice-and-Autism-6am-News-101110.mp4?raw=1"
   controls
   autoplay
   loop
