--- a/irs.html
+++ b/irs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>VHS Video</title>
+<title>iktruhs</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -10,9 +10,12 @@
     margin: 0;
     background: #000;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
     min-height: 100vh;
+    color: #fff;
+    font-family: Arial, sans-serif;
   }
 
   .vhs-frame {
@@ -31,6 +34,18 @@
     height: 100%;
     border: 0;
   }
+
+  .back-link {
+    margin-top: 18px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #fff;
+  }
+
+  .back-link:hover {
+    color: #ffcc00;
+    text-decoration: underline;
+  }
 </style>
 </head>
 <body>
@@ -42,6 +57,8 @@
     allowfullscreen
   ></iframe>
 </div>
+
+<a class="back-link" href="https://iktruhs.github.io" target="_blank">birds nest</a>
 
 </body>
 </html>
