--- a/nb.html
+++ b/nb.html
@@ -11,7 +11,7 @@
       min-height: 100vh;
 
       /* BACKGROUND IMAGE */
-      background-image: url("https://i.imgur.com/ZtnDPYC.png");
+      background-image: url("https://i.imgur.com/24leqRq_d.jpeg?maxwidth=520&shape=thumb&fidelity=high");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -21,7 +21,7 @@
       font-family: Arial, Helvetica, sans-serif;
     }
 
-    /* Clock styles */
+    /* Clock */
     .clock {
       position: fixed;
       top: 14px;
@@ -32,12 +32,35 @@
       text-align: right;
       line-height: 1.4;
       user-select: none;
+      z-index: 20;
+    }
+
+    /* OVERLAY IMAGE */
+    .overlay-image {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) rotate(-180deg);
+      width: 60%;
+      max-width: 700px;
+      pointer-events: none; /* doesn't block clicks */
+      z-index: 10;
+    }
+
+    .overlay-image img {
+      width: 100%;
+      height: auto;
+      display: block;
     }
   </style>
 </head>
 <body>
 
   <div class="clock" id="clock"></div>
+
+  <div class="overlay-image">
+    <img src="https://i.imgur.com/nxyUMPq_d.png?maxwidth=520&shape=thumb&fidelity=high" alt="Overlay Image">
+  </div>
 
   <script>
     const clockEl = document.getElementById("clock");
@@ -69,3 +92,4 @@
 
 </body>
 </html>
+
