--- a/about.html
+++ b/about.html
@@ -96,10 +96,16 @@
 
     /* Top title styling */
     .title {
-      font-size: 28px;
+      font-size: 40px;
       letter-spacing: 2px;
       margin-bottom: 10px;
     }
+
+    <style>
+h1 {
+font-size: 40px;
+}
+
   </style>
 </head>
 
@@ -108,6 +114,7 @@
  <a class="fixed-logo" href="index.html">
   <img src="https://i.imgur.com/ZzvBYMX.png" alt="iktruhs logo">
 </a>
+
 
 
   <!-- PAGE -->
