--- a/about.html
+++ b/about.html
@@ -99,7 +99,11 @@
       letter-spacing: 2px;
       margin-bottom: 10px;
     }
-
+    
+.content {
+    max-width: 80px; /* Limit width */
+    width: 80%;      /* Allow responsiveness */
+    word-wrap: break-word;
   
 h1 {
 font-size: 25px;
