--- a/about.html
+++ b/about.html
@@ -5,7 +5,6 @@
   <title>yp</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- 10-point star favicon -->
   <link rel="icon" type="image/svg+xml"
     href="data:image/svg+xml;utf8,
     <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>
@@ -13,54 +12,105 @@
       fill='white' stroke='black' stroke-width='2'/>
     </svg>">
 
- <style>
-  /* 1. Define the font-face using your uploaded file */
-  @font-face {
-    font-family: 'Another Typewriter';
-    src: url('another-typewriter.zip/atwriter.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-  }
+  <style>
+    /* 1. DEFINE THE CUSTOM FONT */
+    @font-face {
+      font-family: 'Another Typewriter';
+      /* Ensure this path matches where your .ttf file is hosted */
+      src: url('atwriter.ttf') format('truetype');
+      font-weight: normal;
+      font-style: normal;
+    }
 
-  html {
-    scroll-behavior: smooth;
-  }
+    html {
+      scroll-behavior: smooth;
+    }
 
-  body {
-    margin: 0;
-    /* 2. Apply the new font to the body */
-    font-family: 'Another Typewriter', Verdana, Geneva, sans-serif;
-    font-weight: 700;
-    background: #0a0a0a;
-    color: #f2f2f2;
-    text-align: center;
-    min-height: 100vh;
-    padding-top: 140px;
-    overflow-x: hidden;
-    display: flex;
-    flex-direction: column;
-  }
+    body {
+      margin: 0;
+      /* 2. APPLY THE CUSTOM FONT */
+      font-family: 'Another Typewriter', Verdana, Geneva, sans-serif;
+      font-weight: 700;
+      background: #0a0a0a;
+      color: #f2f2f2;
+      text-align: center;
+      min-height: 100vh;
+      padding-top: 140px;
+      overflow-x: hidden;
+      display: flex;
+      flex-direction: column;
+    }
 
-  /* ... rest of your styles ... */
+    /* Fixed top logo */
+    .fixed-logo {
+      position: fixed;
+      top: -40px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 2000;
+      cursor: pointer;
+    }
 
-  /* h1 styling */
-  h1 {
-    font-size: 24px; /* Changed as requested */
-    line-height: 1.3;
-    max-width: 900px;
-    margin: 0 20px;
-  }
-</style>
-  
+    .fixed-logo img {
+      max-width: 350px;
+      width: 100%;
+      opacity: 0.95;
+      transition: transform 0.25s ease, opacity 0.25s ease;
+    }
+
+    .fixed-logo img:hover {
+      transform: scale(1.04);
+      opacity: 1;
+    }
+
+    /* Page wrapper */
+    #page {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 24px;
+      transition: transform 0.6s ease, opacity 0.6s ease;
+    }
+
+    body.closing #page {
+      transform: scale(0.78);
+      opacity: 0;
+    }
+
+    a {
+      color: #f2f2f2;
+      font-weight: bold;
+      text-decoration: none;
+    }
+
+    a:hover {
+      color: #ffcc00;
+      text-decoration: underline;
+    }
+
+    /* Top title styling */
+    .title {
+      font-size: 40px;
+      letter-spacing: 2px;
+      margin-bottom: 10px;
+    }
+
+    /* h1 styling */
+    h1 {
+      font-size: 24px; /* UPDATED FROM 20px */
+      line-height: 1.3;
+      max-width: 900px;
+      margin: 0 20px;
+    }
+  </style>
 </head>
 
 <body>
-  <!-- LOGO -->
   <a class="fixed-logo" href="index.html">
     <img src="https://i.imgur.com/ZzvBYMX.png" alt="iktruhs logo">
   </a>
 
-  <!-- PAGE -->
   <div id="page">
     <div class="title">about</div>
 
