--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     /* 1. DEFINE THE CUSTOM FONT */
     @font-face {
       font-family: 'Another Typewriter';
-      src: url('atwriter.ttf') format('truetype');
+      src: url('another-typewriter.zip') format('truetype');
       font-weight: normal;
       font-style: normal;
     }
